--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
  <tr style="height: 56px;">
   <td id="projectalign" style="padding-left: 0.5em;">
    <div id="projectname">max7219
-   &#160;<span id="projectnumber">0.9 (last modified 18-06-2016)</span>
+   &#160;<span id="projectnumber">0.9 (last modified 20-06-2016)</span>
    </div>
-   <div id="projectbrief">This library is meant to be used with bmptk and hwlib.</div>
+   <div id="projectbrief">This library is meant to be used with bmptk and hwlib</div>
   </td>
  </tr>
  </tbody>
@@ -40,6 +40,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   <div id="navrow1" class="tabs">
     <ul class="tablist">
       <li class="current"><a href="index.html"><span>Main&#160;Page</span></a></li>
+      <li><a href="pages.html"><span>Related&#160;Pages</span></a></li>
       <li><a href="annotated.html"><span>Classes</span></a></li>
       <li><a href="files.html"><span>Files</span></a></li>
       <li>
